# aula15_bootcamp_part2

./: README.md  pyproject.toml
data/: products.csv
